이미지 추가 css 수정

--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -59,7 +59,8 @@
         "아드리아나": "아드리아나",
         "쇼이치": "쇼이치"
     },
-    "weapons": {"투척": "투척", 
+    "weapons": {
+        "투척": "투척", 
         "권총": "권총", 
         "돌격소총": "돌격소총", 
         "저격총": "저격총", 
