실비아 스킬 이미지 추가, 아이템 이름 오류 수정, 톤파 이미지 오류 수정, 상위/하위 능력치 제거, 듀오/스쿼드 증폭 추가, 배너아이콘 추가

--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -41,13 +41,12 @@
     },
 
     "detail": {
-        "upState": "상위 능력치",
-        "downState": "하위 능력치",
-        "attack": "공격력",
-        "attack_speed": "공격속도",
-        "health": "체력",
-        "skill_info": "스킬 정보",
-        "avg": "평균"
+        "duoStat": "듀오 피해증폭",
+        "squadStat": "스쿼드 피해증폭",
+        "giveDmg": "주는 피해",
+        "takeDmg": "받는 피해",
+        "avg": "평균",
+        "skill_info": "스킬 정보"
     },
 
     "characters": {
