--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -17,8 +17,7 @@
     "kill": "킬",
     "avg-kill": "평균킬",
     "lately-patch": "최근패치",
-    
-
+    "name":"이름", 
 
     "main": {
         "banner": {
@@ -48,7 +47,9 @@
         "giveDmg": "주는 피해",
         "takeDmg": "받는 피해",
         "avg": "평균",
-        "skill_info": "스킬 정보"
+        "skill_info": "스킬 정보",
+        "passive": "패시브",
+        "weaponSkill": "무기스킬"
     },
 
     "characters": {
@@ -90,6 +91,13 @@
         "배트": "배트", 
         "망치": "망치", 
         "석궁": "석궁"        
+    },
+    "armor": {
+        "옷":"옷",
+        "머리":"머리",
+        "팔":"팔",
+        "다리":"다리",
+        "장식":"장식"
     },
     "items":{
         "마탄의사수": "마탄의사수",
@@ -208,14 +216,14 @@
         "수정티아라": "수정티아라",
         "오토바이헬멧": "오토바이헬멧",
         "월계관": "월계관",
-        "전술-OPS헬멧": "전술-OPS헬멧",
+        "전술OPS헬멧": "전술OPS헬멧",
         "제국왕관": "제국왕관",
         "황실부르고넷": "황실부르고넷",
-        "EOD슈트": "EOD슈트",
-        "광학미채슈트": "광학미채슈트",
+        "EOD수트": "EOD수트",
+        "광학미채수트": "광학미채수트",
         "락커의자켓": "락커의자켓",
         "미스릴갑옷": "미스릴갑옷",
-        "배틀슈트": "배틀슈트",
+        "배틀수트": "배틀수트",
         "불꽃드레스": "불꽃드레스",
         "석양의갑옷": "석양의갑옷",
         "성기사의갑옷": "성기사의갑옷",
@@ -226,7 +234,7 @@
         "집사복": "집사복",
         "카바나": "카바나",
         "퀸오브하트": "퀸오브하트",
-        "궁기병의화살통": "궁기병의화살통",
+        "궁기병의 화살통": "궁기병의 화살통",
         "달빛펜던트": "달빛펜던트",
         "만년빙": "만년빙",
         "백우선": "백우선",
@@ -244,8 +252,10 @@
         "샤자한의검집": "샤자한의검집",
         "소드스토퍼": "소드스토퍼",
         "스카디의팔찌": "스카디의팔찌",
-        "오토-암즈": "오토-암즈",
-        "큐브워치": "큐브워치"
+        "오토암즈": "오토암즈",
+        "큐브워치": "큐브워치",
+        "EOD부츠": "EOD부츠",
+        "먼지털이개": "먼지털이개"
     },
     "skill": {
         "아야": {
