--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -69,7 +69,8 @@
         "시셀라": "시셀라",
         "키아라": "키아라",
         "아드리아나": "아드리아나",
-        "쇼이치": "쇼이치"
+        "쇼이치": "쇼이치",
+        "실비아": "실비아"
     },
     "weapons": {
         "투척": "투척", 
@@ -255,7 +256,8 @@
         "오토암즈": "오토암즈",
         "큐브워치": "큐브워치",
         "EOD부츠": "EOD부츠",
-        "먼지털이개": "먼지털이개"
+        "먼지털이개": "먼지털이개",
+        "일렉트론블라스터": "일렉트론블라스터"
     },
     "skill": {
         "아야": {
