Revert "실비아 추가"
This reverts commit 8bb165e9fb8ef93f2a4433975d0f93b8a7b343d9.

--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -69,8 +69,7 @@
         "시셀라": "시셀라",
         "키아라": "키아라",
         "아드리아나": "아드리아나",
-        "쇼이치": "쇼이치",
-        "실비아": "실비아"
+        "쇼이치": "쇼이치"
     },
     "weapons": {
         "투척": "투척", 
@@ -256,8 +255,7 @@
         "오토암즈": "오토암즈",
         "큐브워치": "큐브워치",
         "EOD부츠": "EOD부츠",
-        "먼지털이개": "먼지털이개",
-        "일렉트론블라스터": "일렉트론블라스터"
+        "먼지털이개": "먼지털이개"
     },
     "skill": {
         "아야": {
