eod부츠 이미지 추가, 언어설정 스타일링, 캐릭터검색 스타일링

--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -26,7 +26,7 @@
                 "rank": "랭크",
                 "item": "아이템"
             },
-            "placeholder": "  캐릭터를 검색하세요."
+            "placeholder": "캐릭터를 검색하세요."
         },
         "left": {
             "search": {
@@ -105,7 +105,7 @@
         "매그넘-보아": "매그넘-보아",
         "악켈테": "악켈테",
         "엘레강스": "엘레강스",
-        "단영촌전투": "단영촌전투",
+        "단영촌천투": "단영촌천투",
         "디바인피스트": "디바인피스트",
         "브레이질건틀릿": "브레이질건틀릿",
         "블러드윙너클": "블러드윙너클",
