영어 완성, 중국어 폰트 추가, 로고 수정

--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -101,31 +101,32 @@
         "장식":"장식"
     },
     "items":{
-        "마탄의사수": "마탄의사수",
+        "일렉트론블라스터": "일렉트론 블라스터",
+        "마탄의사수": "마탄의 사수",
         "매그넘-보아": "매그넘-보아",
         "악켈테": "악켈테",
         "엘레강스": "엘레강스",
         "단영촌천투": "단영촌천투",
-        "디바인피스트": "디바인피스트",
-        "브레이질건틀릿": "브레이질건틀릿",
-        "블러드윙너클": "블러드윙너클",
+        "디바인피스트": "디바인 피스트",
+        "브레이질건틀릿": "브레이질 건틀릿",
+        "블러드윙너클": "블러드윙 너클",
         "빙화현옥수": "빙화현옥수",
         "소수": "소수",
         "여래수투": "여래수투",
         "천잠장갑": "천잠장갑",
-        "더월": "더월",
+        "더월": "더 월",
         "보헤미안": "보헤미안",
         "새티스팩션": "새티스팩션",
-        "원더풀투나잇": "원더풀투나잇",
-        "천국의계단": "천국의계단",
-        "틴스피릿": "틴스피릿",
-        "퍼플헤이즈": "퍼플헤이즈",
-        "초진동나이프": "초진동나이프",
+        "원더풀투나잇": "원더풀 투나잇",
+        "천국의계단": "천국의 계단",
+        "틴스피릿": "틴 스피릿",
+        "퍼플헤이즈": "퍼플 헤이즈",
+        "초진동나이프": "초진동 나이프",
         "카른웬난": "카른웬난",
         "파산검": "파산검",
         "프라가라흐": "프라가라흐",
-        "빔엑스": "빔엑스",
-        "산타무에르떼": "산타무에르떼",
+        "빔엑스": "빔 엑스",
+        "산타무에르떼": "산타 무에르떼",
         "스퀴테": "스퀴테",
         "파라슈": "파라슈",
         "하르페": "하르페",
@@ -133,7 +134,7 @@
         "XCR": "XCR",
         "개틀링건": "개틀링건",
         "기관총": "기관총",
-        "듀랜달Mk2": "듀랜달Mk2",
+        "듀랜달Mk2": "듀랜달 Mk2",
         "미스틸테인": "미스틸테인",
         "볼틱레토": "볼틱레토",
         "유성검": "유성검",
@@ -141,31 +142,32 @@
         "활빈검": "활빈검",
         "개밥바라기": "개밥바라기",
         "낭아봉": "낭아봉",
-        "다그다의망치": "다그다의망치",
+        "다그다의망치": "다그다의 망치",
         "마법봉": "마법봉",
-        "구원의여신상": "구원의여신상",
-        "스파이의우산": "스파이의우산",
+        "토르의망치": "토르의 망치",
+        "구원의여신상": "구원의 여신상",
+        "스파이의우산": "스파이의 우산",
         "여의봉": "여의봉",
         "타구봉": "타구봉",
         "대황": "대황",
         "발리스타": "발리스타",
         "샤릉가": "샤릉가",
-        "영광금귀신기노": "영광금귀신기노",
-        "저격크로스보우": "저격크로스보우",
+        "영광금귀신기노": "영광금귀 신기노",
+        "저격크로스보우": "저격 크로스보우",
         "디오스쿠로이": "디오스쿠로이",
         "로이거 차르": "로이거 차르",
         "이천일류": "이천일류",
         "자웅일대검": "자웅일대검",
         "대소반룡곤": "대소반룡곤",
-        "초진동눈차크": "초진동눈차크",
+        "초진동눈차크": "초진동 눈차크",
         "건곤권": "건곤권",
         "만천화우": "만천화우",
-        "미치광이왕의카드": "미치광이왕의카드",
+        "미치광이왕의카드": "미치광이왕의 카드",
         "빙백은침": "빙백은침",
         "생사부": "생사부",
         "수다르사나": "수다르사나",
         "옥전결": "옥전결",
-        "푸른색단도": "푸른색단도",
+        "푸른색단도": "푸른색 단도",
         "풍마수리검": "풍마수리검",
         "플레솃": "플레솃",
         "다인슬라이프": "다인슬라이프",
@@ -174,90 +176,91 @@
         "모노호시자오": "모노호시자오",
         "아론다이트": "아론다이트",
         "엑스칼리버": "엑스칼리버",
-        "플라즈마소드": "플라즈마소드",
+        "플라즈마소드": "플라즈마 소드",
         "호푸어드": "호푸어드",
         "NTW-20": "NTW-20",
         "Tac-50": "Tac-50",
         "사사성광": "사사성광",
+        "폴라리스": "폴라리스",
         "인터벤션": "인터벤션",
-        "롱기누스의창": "롱기누스의창",
+        "롱기누스의창": "롱기누스의 창",
         "방천화극": "방천화극",
         "애각창": "애각창",
         "장팔사모": "장팔사모",
         "청룡언월도": "청룡언월도",
-        "코스믹바이던트": "코스믹바이던트",
+        "코스믹바이던트": "코스믹 바이던트",
         "트리아이나": "트리아이나",
         "화첨창": "화첨창",
         "마이쏙": "마이쏙",
-        "택티컬톤파": "택티컬톤파",
-        "플라즈마톤파": "플라즈마톤파",
-        "고폭수류탄": "고폭수류탄",
-        "다비드슬링": "다비드슬링",
-        "루테늄구슬": "루테늄구슬",
+        "택티컬톤파": "택티컬 톤파",
+        "플라즈마톤파": "플라즈마 톤파",
+        "고폭수류탄": "고폭 수류탄",
+        "다비드슬링": "다비드 슬링",
+        "루테늄구슬": "루테늄 구슬",
         "소이탄": "소이탄",
-        "안티오크의수류탄": "안티오크의수류탄",
+        "안티오크의수류탄": "안티오크의 수류탄",
         "연막탄": "연막탄",
-        "골든래쇼보우": "골든래쇼보우",
-        "엘리멘탈보우": "엘리멘탈보우",
-        "트윈보우": "트윈보우",
+        "골든래쇼보우": "골든래쇼 보우",
+        "엘리멘탈보우": "엘리멘탈 보우",
+        "트윈보우": "트윈 보우",
         "페일노트": "페일노트",
         "편전": "편전",
-        "경량화부츠": "경량화부츠",
-        "글레이셜슈즈": "글레이셜슈즈",
-        "매버릭러너": "매버릭러너",
-        "미스릴부츠": "미스릴부츠",
+        "경량화부츠": "경량화 부츠",
+        "글레이셜슈즈": "글레이셜 슈즈",
+        "매버릭러너": "매버릭 러너",
+        "미스릴부츠": "미스릴 부츠",
         "부케팔로스": "부케팔로스",
         "분홍신": "분홍신",
-        "클링온부츠": "클링온부츠",
+        "클링온부츠": "클링온 부츠",
         "풍화륜": "풍화륜",
-        "헤르메스의부츠": "헤르메스의부츠",
-        "기사단장의투구": "기사단장의투구",
-        "미스릴투구": "미스릴투구",
+        "헤르메스의부츠": "헤르메스의 부츠",
+        "기사단장의투구": "기사단장의 투구",
+        "미스릴투구": "미스릴 투구",
         "변검": "변검",
-        "수정티아라": "수정티아라",
-        "오토바이헬멧": "오토바이헬멧",
+        "수정티아라": "수정 티아라",
+        "오토바이헬멧": "오토바이 헬멧",
         "월계관": "월계관",
-        "전술OPS헬멧": "전술OPS헬멧",
-        "제국왕관": "제국왕관",
-        "황실부르고넷": "황실부르고넷",
-        "EOD수트": "EOD수트",
-        "광학미채수트": "광학미채수트",
-        "락커의자켓": "락커의자켓",
-        "미스릴갑옷": "미스릴갑옷",
-        "배틀수트": "배틀수트",
-        "불꽃드레스": "불꽃드레스",
-        "석양의갑옷": "석양의갑옷",
-        "성기사의갑옷": "성기사의갑옷",
-        "아마조네스아머": "아마조네스아머",
+        "전술OPS헬멧": "전술 OPS 헬멧",
+        "제국왕관": "제국 왕관",
+        "황실부르고넷": "황실 부르고넷",
+        "EOD수트": "EOD 수트",
+        "광학미채수트": "광학미채 수트",
+        "락커의자켓": "락커의 자켓",
+        "미스릴갑옷": "미스릴 갑옷",
+        "배틀수트": "배틀 수트",
+        "불꽃드레스": "불꽃 드레스",
+        "석양의갑옷": "석양의 갑옷",
+        "성기사의갑옷": "성기사의 갑옷",
+        "아마조네스아머": "아마조네스 아머",
         "어사의": "어사의",
-        "용의도복": "용의도복",
-        "지휘관의갑옷": "지휘관의갑옷",
+        "용의도복": "용의 도복",
+        "지휘관의갑옷": "지휘관의 갑옷",
         "집사복": "집사복",
         "카바나": "카바나",
-        "퀸오브하트": "퀸오브하트",
+        "퀸오브하트": "퀸 오브 하트",
         "궁기병의 화살통": "궁기병의 화살통",
-        "달빛펜던트": "달빛펜던트",
+        "달빛펜던트": "달빛 펜던트",
         "만년빙": "만년빙",
         "백우선": "백우선",
         "삼매진화": "삼매진화",
-        "슈뢰딩거의상자": "슈뢰딩거의상자",
-        "에메랄드타블렛": "에메랄드타블렛",
+        "슈뢰딩거의상자": "슈뢰딩거의 상자",
+        "에메랄드타블렛": "에메랄드 타블렛",
         "우치와": "우치와",
-        "진리는나의빛": "진리는나의빛",
+        "진리는나의빛": "진리는 나의빛",
         "탄창": "탄창",
-        "기사의신조": "기사의신조",
+        "기사의신조": "기사의 신조",
         "드라우프니르": "드라우프니르",
         "레이더": "레이더",
-        "미스릴방패": "미스릴방패",
-        "바이탈센서": "바이탈센서",
-        "샤자한의검집": "샤자한의검집",
-        "소드스토퍼": "소드스토퍼",
-        "스카디의팔찌": "스카디의팔찌",
-        "오토암즈": "오토암즈",
+        "미스릴방패": "미스릴 방패",
+        "바이탈센서": "바이탈 센서",
+        "샤자한의검집": "샤자한의 검집",
+        "소드스토퍼": "소드 스토퍼",
+        "스카디의팔찌": "스카디의 팔찌",
+        "오토암즈": "오토-암즈",
         "큐브워치": "큐브워치",
-        "EOD부츠": "EOD부츠",
+        "EOD부츠": "EOD 부츠",
         "먼지털이개": "먼지털이개",
-        "일렉트론블라스터": "일렉트론블라스터"
+        "일렉트론블라스터": "일렉트론 블라스터"
     },
     "skill": {
         "아야": {
@@ -587,7 +590,7 @@
             },
             "R": {
                 "name": "폭주 / 심판",
-                "Detail": "키아라가 폭주하여 날개를 펼치며 일정 시간동안 변신합니다.\n변신하는 동안 기본 공격이 원거리로 변경되고, 최대체력이 증가합니다.\n폭주 범위안의 적들에게 매 초마다 피해를 입히고, 피해량에 비례해 자신의 체력을 회복합니다.\n폭주 중인 키아라는 낙인이 최대 중첩까지 쌓인 적의 시야를 획득하며, 대상에게 심판을 시전 할 수 있습니다.\n`심판 : 낙인이 최대 중첩인 대상에게 스킬을 다시 사용하면 대상에게 빠르게 낙하하여 고정 피해를 입히고 폭주 상태를 종료합니다. 심판으로 적을 처치하면 폭주의 재사용 대기시간이 50% 감소합니다.`"
+                "Detail": "키아라가 폭주하여 날개를 펼치며 일정 시간동안 변신합니다.\n변신하는 동안 기본 공격이 원거리로 변경되고, 최대체력이 증가합니다.\n폭주 범위안의 적들에게 매 초마다 피해를 입히고, 피해량에 비례해 자신의 체력을 회복합니다.\n폭주 중인 키아라는 낙인이 최대 중첩까지 쌓인 적의 시야를 획득하며, 대상에게 심판을 시전 할 수 있습니다.\n심판 : 낙인이 최대 중첩인 대상에게 스킬을 다시 사용하면 대상에게 빠르게 낙하하여 고정 피해를 입히고 폭주 상태를 종료합니다. 심판으로 적을 처치하면 폭주의 재사용 대기시간이 50% 감소합니다."
             }
         },
         "아드리아나": {
