중어 추가 번역, 언어오류 수정

--- a/src/locale/cn.json
+++ b/src/locale/cn.json
@@ -1,8 +1,8 @@
 {
-    "Data-period": "Upadated 2020.11.19 / Data period 2020.11.17 ~ 11.18",
+    "Data-period": "更新 2020.11.19 / 数据期间 2020.11.17 ~ 11.18",
     "search": "搜索",
     "character": "性格",
-    "weapon": "兵器",
+    "weapon": "武器",
     "ranking": "排名",
     "rank": "排名",
     "avg-rank": "平均-排名",
@@ -17,6 +17,7 @@
     "kill": "击杀",
     "avg-kill": "平均-击杀",
     "lately-patch": "最近-",
+    "name":"名字",
 
 
     "main": {
@@ -47,208 +48,217 @@
         "giveDmg": "给害",
         "takeDmg": "被害",
         "avg": "平均",
-        "skill_info": "技能资讯"
+        "skill_info": "技能资讯",
+        "passive": "被动的",
+        "weaponSkill": "武器技能"
     },
 
     "characters": {
         "아야": "阿雅",
         "피오라": "菲欧娜",
-        "현우": "Hyunwoo",
+        "현우": "玄佑",
         "재키": "杰琪",
         "매그너스": "马格努斯",
         "나딘": "娜町",
         "자히르": "扎希尔",
-        "하트": "Hart",
-        "아이솔": "Isol",
-        "리 다이린": "Li Dailin",
-        "유키": "Yuki",
-        "혜진": "Hyejin",
-
-        "쇼우": "Xiukai",
-        "시셀라": "Sissela",
-        "키아라": "Chiara",
-        "아드리아나": "Adriana",
-        "쇼이치": "Shoichi"
+        "하트": "哈特",
+        "아이솔": "埃索",
+        "리 다이린": "利黛琳",
+        "유키": "雪",
+        "혜진": "慧珍",
+        "쇼우": "修凯",
+        "시셀라": "希瑟拉",
+        "키아라": "奇娅拉",
+        "아드리아나": "阿德瑞娜",
+        "쇼이치": "彰一",
+        "실비아": "西尔维娅"
     },
     "weapons": {
-        "투척": "Throw", 
-        "권총": "Pistol", 
-        "돌격소총": "Assault Rifle", 
-        "저격총": "Sniper Rifle", 
-        "레이피어": "Rapier", 
-        "창": "Spear", 
-        "양손검": "Two-Handed Sword", 
-        "기타": "Guitar", 
-        "활": "Bow", 
-        "암기": "Shuriken", 
-        "톤파": "Tonfa", 
-        "글러브": "Glove", 
-        "도끼": "Axe", 
-        "쌍검": "Dual Swords", 
-        "단검": "Dagger", 
-        "쌍절곤": "Nunchaku", 
-        "배트": "Bat", 
-        "망치": "Hammer", 
-        "석궁": "Crossbow"        
+        "투척": "投掷", 
+        "권총": "手枪", 
+        "돌격소총": "冲锋枪", 
+        "저격총": "狙击枪", 
+        "레이피어": "双刃剑", 
+        "창": "枪", 
+        "양손검": "双手剑", 
+        "기타": "吉他", 
+        "활": "弓", 
+        "암기": "暗器", 
+        "톤파": "旋棍", 
+        "글러브": "皮手套", 
+        "도끼": "斧子", 
+        "쌍검": "双剑", 
+        "단검": "单手剑", 
+        "쌍절곤": "双节棍", 
+        "배트": "棒", 
+        "망치": "铁锤", 
+        "석궁": "弩"        
+    },
+    "armor": {
+        "옷": "胸部",
+        "머리":"头部",
+        "팔": "手臂",
+        "다리": "腿部",
+        "장식": "装饰"
     },
     "items":{
-        "일렉트론블라스터": "일렉트론블라스터",
-        "마탄의사수": "마탄의사수",
-        "매그넘-보아": "매그넘-보아",
-        "악켈테": "악켈테",
-        "엘레강스": "엘레강스",
-        "단영촌천투": "단영촌전투",
-        "디바인피스트": "디바인피스트",
-        "브레이질건틀릿": "브레이질건틀릿",
-        "블러드윙너클": "블러드윙너클",
-        "빙화현옥수": "빙화현옥수",
-        "소수": "소수",
-        "여래수투": "여래수투",
-        "천잠장갑": "천잠장갑",
-        "더월": "더월",
-        "보헤미안": "보헤미안",
-        "새티스팩션": "새티스팩션",
-        "원더풀투나잇": "원더풀투나잇",
-        "천국의계단": "천국의계단",
-        "틴스피릿": "틴스피릿",
-        "퍼플헤이즈": "퍼플헤이즈",
-        "초진동나이프": "초진동나이프",
-        "카른웬난": "카른웬난",
-        "파산검": "파산검",
-        "프라가라흐": "프라가라흐",
-        "빔엑스": "빔엑스",
-        "산타무에르떼": "산타무에르떼",
-        "스퀴테": "스퀴테",
-        "파라슈": "파라슈",
-        "하르페": "하르페",
+        "일렉트론블라스터": "Electron Blaster",
+        "마탄의사수": "Devil's Marksman",
+        "매그넘-보아": "Magnum-Boa",
+        "악켈테": "Kelte",
+        "엘레강스": "Elegance",
+        "단영촌천투": "One Inch Punch",
+        "디바인피스트": "Divine Fist",
+        "브레이질건틀릿": "Brasil Gauntlet",
+        "블러드윙너클": "Bloodwing Knuckles",
+        "빙화현옥수": "Frost Petal Hand",
+        "소수": "White Claw Punch",
+        "여래수투": "Buddha's Palm",
+        "천잠장갑": "Imperial Silk Glove",
+        "더월": "The Wall",
+        "보헤미안": "Bohemian",
+        "새티스팩션": "Satisfaction",
+        "원더풀투나잇": "Wonderful Tonight",
+        "천국의계단": "Stairway to Heaven",
+        "틴스피릿": "Teen Spirit",
+        "퍼플헤이즈": "Purple Haze",
+        "초진동나이프": "Vibroblade",
+        "카른웬난": "Carnwennan",
+        "파산검": "Mount Slicer",
+        "프라가라흐": "Fragarach",
+        "빔엑스": "Beam Axe",
+        "산타무에르떼": "Santa Muerte",
+        "스퀴테": "Scythe",
+        "파라슈": "Parashu",
+        "하르페": "Harpe",
         "AK-12": "AK-12",
         "XCR": "XCR",
-        "개틀링건": "개틀링건",
-        "기관총": "기관총",
-        "듀랜달Mk2": "듀랜달Mk2",
-        "미스틸테인": "미스틸테인",
-        "볼틱레토": "볼틱레토",
-        "유성검": "유성검",
-        "주와이외즈": "주와이외즈",
-        "활빈검": "활빈검",
-        "개밥바라기": "개밥바라기",
-        "낭아봉": "낭아봉",
-        "다그다의망치": "다그다의망치",
-        "마법봉": "마법봉",
-        "토르의망치": "토르의망치",
-        "구원의여신상": "구원의여신상",
-        "스파이의우산": "스파이의우산",
-        "여의봉": "여의봉",
-        "타구봉": "타구봉",
-        "대황": "대황",
-        "발리스타": "발리스타",
-        "샤릉가": "샤릉가",
-        "영광금귀신기노": "영광금귀신기노",
-        "저격크로스보우": "저격크로스보우",
-        "디오스쿠로이": "디오스쿠로이",
-        "로이거 차르": "로이거 차르",
-        "이천일류": "이천일류",
-        "자웅일대검": "자웅일대검",
-        "대소반룡곤": "대소반룡곤",
-        "초진동눈차크": "초진동눈차크",
-        "건곤권": "건곤권",
-        "만천화우": "만천화우",
-        "미치광이왕의카드": "미치광이왕의카드",
-        "빙백은침": "빙백은침",
-        "생사부": "생사부",
-        "수다르사나": "수다르사나",
-        "옥전결": "옥전결",
-        "푸른색단도": "푸른색단도",
-        "풍마수리검": "풍마수리검",
-        "플레솃": "플레솃",
-        "다인슬라이프": "다인슬라이프",
-        "뚜언띠엔": "뚜언띠엔",
-        "레바테인": "레바테인",
-        "모노호시자오": "모노호시자오",
-        "아론다이트": "아론다이트",
-        "엑스칼리버": "엑스칼리버",
-        "플라즈마소드": "플라즈마소드",
-        "호푸어드": "호푸어드",
+        "개틀링건": "Gatling Gun",
+        "기관총": "Machine Gun",
+        "듀랜달Mk2": "Durendal mk2",
+        "미스틸테인": "Mistilteinn",
+        "볼틱레토": "Volticletto",
+        "유성검": "Meteor Claymore",
+        "주와이외즈": "Joyeuse",
+        "활빈검": "Sword of Justice",
+        "개밥바라기": "Evening Star",
+        "낭아봉": "Fang Mace",
+        "다그다의망치": "Hammer of Dagda",
+        "마법봉": "Magic Stick",
+        "토르의망치": "Hammer of Thor",
+        "구원의여신상": "Statue of Soteria",
+        "스파이의우산": "Spy Umbrella",
+        "여의봉": "Monkey King Bar",
+        "타구봉": "Mallet",
+        "대황": "The Legend of The General",
+        "발리스타": "Ballista",
+        "샤릉가": "Sharanga",
+        "영광금귀신기노": "The Golden Ghost",
+        "저격크로스보우": "Sniper Crossbow",
+        "디오스쿠로이": "Dioscuri",
+        "로이거 차르": "Lloigor & Zahr",
+        "이천일류": "Divine Dual Swords",
+        "자웅일대검": "Starsteel Twin Swords",
+        "대소반룡곤": "The Smiting Dragon",
+        "초진동눈차크": "Vibro Nunchaku",
+        "건곤권": "Wind and Fire Wheels",
+        "만천화우": "Petal Torrent",
+        "미치광이왕의카드": "Cards of Tyranny",
+        "빙백은침": "Frost Venom Dart",
+        "생사부": "Death Rune",
+        "수다르사나": "Sudarsana",
+        "옥전결": "Mystic Jade Charm",
+        "푸른색단도": "Azure Dagger",
+        "풍마수리검": "Fuhma Shuriken",
+        "플레솃": "Flechette",
+        "다인슬라이프": "Dainsleif",
+        "뚜언띠엔": "Thuan Thien",
+        "레바테인": "Laevateinn",
+        "모노호시자오": "Monohoshizao",
+        "아론다이트": "Arondight",
+        "엑스칼리버": "Excalibur",
+        "플라즈마소드": "Plasma Sword",
+        "호푸어드": "Hovud",
         "NTW-20": "NTW-20",
         "Tac-50": "Tac-50",
-        "사사성광": "사사성광",
-        "폴라리스": "폴라리스",
-        "인터벤션": "인터벤션",
-        "롱기누스의창": "롱기누스의창",
-        "방천화극": "방천화극",
-        "애각창": "애각창",
-        "장팔사모": "장팔사모",
-        "청룡언월도": "청룡언월도",
-        "코스믹바이던트": "코스믹바이던트",
-        "트리아이나": "트리아이나",
-        "화첨창": "화첨창",
-        "마이쏙": "마이쏙",
-        "택티컬톤파": "택티컬톤파",
-        "플라즈마톤파": "플라즈마톤파",
-        "고폭수류탄": "고폭수류탄",
-        "다비드슬링": "다비드슬링",
-        "루테늄구슬": "루테늄구슬",
-        "소이탄": "소이탄",
-        "안티오크의수류탄": "안티오크의수류탄",
-        "연막탄": "연막탄",
-        "골든래쇼보우": "골든래쇼보우",
-        "엘리멘탈보우": "엘리멘탈보우",
-        "트윈보우": "트윈보우",
-        "페일노트": "페일노트",
-        "편전": "편전",
-        "경량화부츠": "경량화부츠",
-        "글레이셜슈즈": "글레이셜슈즈",
-        "매버릭러너": "매버릭러너",
-        "미스릴부츠": "미스릴부츠",
-        "부케팔로스": "부케팔로스",
-        "분홍신": "분홍신",
-        "클링온부츠": "클링온부츠",
-        "풍화륜": "풍화륜",
-        "헤르메스의부츠": "헤르메스의부츠",
-        "기사단장의투구": "기사단장의투구",
-        "미스릴투구": "미스릴투구",
-        "변검": "변검",
-        "수정티아라": "수정티아라",
-        "오토바이헬멧": "오토바이헬멧",
-        "월계관": "월계관",
-        "전술OPS헬멧": "전술OPS헬멧",
-        "제국왕관": "제국왕관",
-        "황실부르고넷": "황실부르고넷",
-        "EOD수트": "EOD수트",
-        "광학미채수트": "광학미채수트",
-        "락커의자켓": "락커의자켓",
-        "미스릴갑옷": "미스릴갑옷",
-        "배틀수트": "배틀수트",
-        "불꽃드레스": "불꽃드레스",
-        "석양의갑옷": "석양의갑옷",
-        "성기사의갑옷": "성기사의갑옷",
-        "아마조네스아머": "아마조네스아머",
-        "어사의": "어사의",
-        "용의도복": "용의도복",
-        "지휘관의갑옷": "지휘관의갑옷",
-        "집사복": "집사복",
-        "카바나": "카바나",
-        "퀸오브하트": "퀸오브하트",
-        "궁기병의 화살통": "궁기병의 화살통",
-        "달빛펜던트": "달빛펜던트",
-        "만년빙": "만년빙",
-        "백우선": "백우선",
-        "삼매진화": "삼매진화",
-        "슈뢰딩거의상자": "슈뢰딩거의상자",
-        "에메랄드타블렛": "에메랄드타블렛",
-        "우치와": "우치와",
-        "진리는나의빛": "진리는나의빛",
-        "탄창": "탄창",
-        "기사의신조": "기사의신조",
-        "드라우프니르": "드라우프니르",
-        "레이더": "레이더",
-        "미스릴방패": "미스릴방패",
-        "바이탈센서": "바이탈센서",
-        "샤자한의검집": "샤자한의검집",
-        "소드스토퍼": "소드스토퍼",
-        "스카디의팔찌": "스카디의팔찌",
-        "오토-암즈": "오토-암즈",
-        "큐브워치": "큐브워치"
+        "사사성광": "The Deadly Ray",
+        "폴라리스": "Polaris",
+        "인터벤션": "Intervention",
+        "롱기누스의창": "Spear of Longinus",
+        "방천화극": "Fangtian Huaji",
+        "애각창": "Gentian Silver Gun",
+        "장팔사모": "Eighteen Foot Spear",
+        "청룡언월도": "Dragon Guandao",
+        "코스믹바이던트": "Cosmic Bident",
+        "트리아이나": "Lance of Poseidon",
+        "화첨창": "Blazing Lance",
+        "마이쏙": "Mai Sok",
+        "택티컬톤파": "Tactical Tonfa",
+        "플라즈마톤파": "Plasma Tonfa",
+        "고폭수류탄": "High Explosive Grenade",
+        "다비드슬링": "David's Sling",
+        "루테늄구슬": "Ruthenium Marble",
+        "소이탄": "Incendiary Bomb",
+        "안티오크의수류탄": "Grenade of Antioch",
+        "연막탄": "Smoke Bomb",
+        "골든래쇼보우": "Golden-Ratio Bow",
+        "엘리멘탈보우": "Elemental Bow",
+        "트윈보우": "Twinbow",
+        "페일노트": "Failnaught",
+        "편전": "Ancient Bolt",
+        "경량화부츠": "Feather Boots",
+        "글레이셜슈즈": "Glacial Shoes",
+        "매버릭러너": "Maverick Runner",
+        "미스릴부츠": "Mithril Boots",
+        "부케팔로스": "Bucephalus",
+        "분홍신": "Red Shoes",
+        "클링온부츠": "White Rhinos",
+        "풍화륜": "Straitjacket Sneakers",
+        "헤르메스의부츠": "Boots of Hermes",
+        "기사단장의투구": "Helm of Banneret",
+        "미스릴투구": "Mithril Helm",
+        "변검": "Chinese Opera Mask",
+        "수정티아라": "Crystal Tiara",
+        "오토바이헬멧": "Motorcycle Helmet",
+        "월계관": "Laurel Wreath",
+        "전술OPS헬멧": "Tactical OPS Helmet",
+        "제국왕관": "Imperial Crown",
+        "황실부르고넷": "Imperial Burgonet",
+        "EOD수트": "EOD Suit",
+        "광학미채수트": "Optical Camouflage Suit",
+        "락커의자켓": "Rocker's Jacket",
+        "미스릴갑옷": "Mithril Armor",
+        "배틀수트": "Battle Suit",
+        "불꽃드레스": "Blazing Dress",
+        "석양의갑옷": "Sunset Armor",
+        "성기사의갑옷": "Crusader Armor",
+        "아마조네스아머": "Amazoness Armor",
+        "어사의": "Covert Agent Uniform",
+        "용의도복": "Dragon Dobok",
+        "지휘관의갑옷": "Commander's Armor",
+        "집사복": "Butler's Suit",
+        "카바나": "Kabana",
+        "퀸오브하트": "Queen of Hearts",
+        "궁기병의 화살통": "Laced Quiver",
+        "달빛펜던트": "Moonlight Pendant",
+        "만년빙": "Glacial Ice",
+        "백우선": "White Crane Fan",
+        "삼매진화": "True Samadhi Fire",
+        "슈뢰딩거의상자": "Schrodinger's Box",
+        "에메랄드타블렛": "Emerald Tablet",
+        "우치와": "Uchiwa",
+        "진리는나의빛": "Veritas Lux Mea",
+        "탄창": "Magazine",
+        "기사의신조": "Creed of the Knight",
+        "드라우프니르": "Draupnir",
+        "레이더": "Radar",
+        "미스릴방패": "Mithril Shield",
+        "바이탈센서": "Vital Sign Sensor",
+        "샤자한의검집": "Sword of Shah Jahan",
+        "소드스토퍼": "Sword Stopper",
+        "스카디의팔찌": "Bracelet of Skadi",
+        "오토-암즈": "Auto-arms",
+        "큐브워치": "Cube Watch"
     },
     "skill": {
         "아야": {
