--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -1,5 +1,5 @@
 {
-    "Data-period": "Upadated 2020.11.19 / Data period 2020.11.17 ~ 11.18",
+    "Data-period": "Updated 2020.11.19 / Data period 2020.11.17 ~ 11.18",
     "search": "검색",
     "character": "캐릭터",
     "weapon": "무기",
