캐릭터 이름 추가

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -258,7 +258,9 @@
         "소드스토퍼": "Sword Stopper",
         "스카디의팔찌": "Bracelet of Skadi",
         "오토-암즈": "Auto-arms",
-        "큐브워치": "Cube Watch"
+        "큐브워치": "Cube Watch",
+        "EOD부츠": "EOD Boots",
+        "먼지털이개": "Feather Duster"
     },
     "skill": {
         "아야": {
