--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -103,6 +103,23 @@
         "다리": "腿部",
         "장식": "装饰"
     },
+    "Archery": "Archery",
+    "Alley": "Alley",
+    "Avenue": "Avenue",
+    "Temple": "Temple",
+    "School": "School",
+    "Hotel": "Hotel",
+    "Pond": "Pond",
+    "Research": "Research",
+    "Beach": "Beach",
+    "Forest": "Forest",
+    "Cemetery": "Cemetery",
+    "Hospital": "Hospital",
+    "Uptown": "Uptown 주택가",
+    "Chapel": "Chapel",
+    "Factory": "Factory",
+    "Dock": "Dock",
+    
     "items":{
         "일렉트론블라스터": "电子光束枪",
         "마탄의사수": "魔弹射手",
