--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -16,7 +16,6 @@
     "pick-rate": "登场率",
     "kill": "击杀",
     "avg-kill": "平均-击杀",
-    "lately-patch": "最近-",
     "name":"名字",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"字符层是根据官方统计的获胜率,选择率,平均技能,平均等级等来计算的。 多重和班级的统计数字减少 了普通杀戮和普通等级的影响。",
@@ -27,7 +26,8 @@
             "language": "简体中文",
             "menu": {
                 "rank": "排名",
-                "item": "物品"
+                "item": "物品",
+                "map": "Map"
             },
             "placeholder": "角色搜索."
         },
@@ -53,6 +53,41 @@
         "skill_info": "技能资讯",
         "passive": "被动的",
         "weaponSkill": "武器技能"
+    },
+    "stat": {
+        "공격력": "공격력",
+        "스킬증폭": "스킬증폭",
+        "공격속도": "공격속도",
+        "생명력흡수": "생명력 흡수",
+        "장탄 수": "장탄수",
+
+        "치명타확률": "치명타 확률",
+        "치명타피해량": "치명타 피해량",
+
+        "기본공격추가피해": "기본공격 추가피해",
+        "기본공격시치유감소": "기본공격시 치유감소",
+        "스킬적중시치유감소": "스킬적중시 치유감소",
+
+        "방어력": "방어력",
+        "기본공격피해감소": "기본공격 피해감소",
+        "스킬피해감소": "스킬 피해감소",
+        
+        "체력": "최대 체력",
+        "최대체력": "최대 체력",
+        "체력재생": "체력 재생",
+
+        "최대스태미너": "최대 스태미너",
+        "스태미너재생": "스태미너 재생",
+        "스태미너재생2": "스태미너 재생",
+        "스테미너재생": "스태미너 재생",
+        "스테미너재생2": "스태미너 재생",
+
+        "시야": "시야",
+        "이동속도": "이동속도",
+        "쿨다운감소": "쿨다운 감소",
+        "기본공격사거리": "기본공격 사거리",
+        "비전투중이동속도": "비전투시 이동속도",
+        "비전투시이동속도": "비전투시 이동속도"
     },
 
     "characters": {
