--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -1,42 +1,42 @@
 {
     "Data-period": "更新 2020.11.19 / 数据期间 2020.11.17 ~ 11.18",
-    "search": "搜索",
+    "search": "検索",
     "character": "性格",
     "weapon": "武器",
     "ranking": "排名",
     "rank": "排名",
     "avg-rank": "平均-排名",
     "item": "物品",
-    "solo": "单人",
-    "duo": "二人",
-    "squad": "三人",
-    "tier": "层级",
-    "total": "层级",
+    "solo": "ソロ",
+    "duo": "デュオ",
+    "squad": "スクワッド",
+    "tier": "ティア",
+    "total": "ティア",
     "win-rate": "胜率",
-    "pick-rate": "登场率",
-    "kill": "击杀",
-    "avg-kill": "平均-击杀",
+    "pick-rate": "ピック率",
+    "kill": "キル",
+    "avg-kill": "平均-キル",
     "name":"名字",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
-    "question":"字符层是根据官方统计的获胜率,选择率,平均技能,平均等级等来计算的。 多重和班级的统计数字减少 了普通杀戮和普通等级的影响。",
-    "question_item":"装甲项目统计数据是由于缺少 数据而基于所有角色的获胜率数据。不是每个角色的装甲赢率。",
+    "question":"キャラクターティアは、公式統計を基にしたキャラクターの勝率、ピック率、平均キル数、平均順位などを基に作られます。 デュオとスクワッドの統計では、平均キール数と平均順位のティアへの影響力が減少します。",
+    "question_item":"防具アイテムの統計は、資料不足により全キャラクター基準勝率資料です。 各キャラクター別の防御球の勝率ではありません。",
 
     "main": {
         "banner": {
-            "language": "简体中文",
+            "language": "日本語",
             "menu": {
                 "rank": "排名",
                 "item": "物品",
-                "map": "地图"
+                "map": "指導"
             },
-            "placeholder": "角色搜索."
+            "placeholder": "キャラクター検索."
         },
         "left": {
             "search": {
-                "placeholder": "別名搜索."
+                "placeholder": "戦績検索."
             },
             "characters": {
-                "placeholder": "角色搜索."
+                "placeholder": "キャラクター検索."
             }
         },
         "right": {
@@ -45,276 +45,276 @@
     },
 
     "detail": {
-        "duoStat": "二人 害-增幅",
-        "squadStat": "三人 害-增幅",
-        "giveDmg": "给害",
-        "takeDmg": "被害",
+        "duoStat": "デュオ 追加被害",
+        "squadStat": "スクワッド 追加被害",
+        "giveDmg": "攻め",
+        "takeDmg": "被撃",
         "avg": "平均",
-        "skill_info": "技能资讯",
-        "passive": "被动的",
-        "weaponSkill": "武器技能"
+        "skill_info": "スキル情報",
+        "passive": "受動的",
+        "weaponSkill": "武器スキル"
     },
     "stat": {
-        "공격력": "攻击力",
-        "스킬증폭": "技能增幅",
-        "공격속도": "攻击速度",
-        "생명력흡수": "体能吸收",
-        "장탄 수": "最大数量",
+        "공격력": "攻撃力",
+        "스킬증폭": "スキル増幅",
+        "공격속도": "攻撃速度",
+        "생명력흡수": "体力力吸収",
+        "장탄 수": "装弾数",
 
-        "치명타확률": "暴击概率",
-        "치명타피해량": "暴击伤害量",
+        "치명타확률": "致命打",
+        "치명타피해량": "致命打被害",
 
-        "기본공격추가피해": "基本攻击额外伤害",
-        "기본공격시치유감소": "基本攻击肘减少治愈",
-        "스킬적중시치유감소": "技能肘减少治愈",
+        "기본공격추가피해": "基本攻撃追加被害",
+        "기본공격시치유감소": "基本攻撃時治癒減少",
+        "스킬적중시치유감소": "スキルを的中させると治癒減少",
 
         "방어력": "防御力",
-        "기본공격피해감소": "基本攻击伤害减少",
-        "스킬피해감소": "技能伤害减少",
+        "기본공격피해감소": "基本攻撃の被害減少",
+        "스킬피해감소": "スキル被害減少",
         
         "체력": "最大体力",
         "최대체력": "最大体力",
         "체력재생": "体力再生",
 
-        "최대스태미너": "最大",
-        "스태미너재생": "耐力再生",
-        "스태미너재생2": "耐力再生",
-        "스테미너재생": "耐力再生",
-        "스테미너재생2": "耐力再生",
+        "최대스태미너": "最大スタミナ",
+        "스태미너재생": "スタミナ再生",
+        "스태미너재생2": "スタミナ再生",
+        "스테미너재생": "スタミナ再生",
+        "스테미너재생2": "スタミナ再生",
 
-        "시야": "视野范围",
-        "이동속도": "移动速度",
-        "쿨다운감소": "冷却减少",
-        "기본공격사거리": "基本攻击射程",
-        "비전투중이동속도": "非战斗 移动速度",
-        "비전투시이동속도": "非战斗 移动速度"
+        "시야": "視界",
+        "이동속도": "移動速度",
+        "쿨다운감소": "クールダウン減少",
+        "기본공격사거리": "基本攻撃の射程距離は",
+        "비전투중이동속도": "非戦闘中の移動速度",
+        "비전투시이동속도": "非戦闘中の移動速度"
     },
 
     "characters": {
-        "아야": "阿雅",
-        "피오라": "菲欧娜",
-        "현우": "玄佑",
-        "재키": "杰琪",
-        "매그너스": "马格努斯",
-        "나딘": "娜町",
-        "자히르": "扎希尔",
-        "하트": "哈特",
-        "아이솔": "埃索",
-        "리 다이린": "利黛琳",
+        "아야": "アヤ",
+        "피오라": "フィオラ",
+        "현우": "ヒョヌ",
+        "재키": "ジャッキー",
+        "매그너스": "マグナス",
+        "나딘": "ナディン",
+        "자히르": "ザヒル",
+        "하트": "ハート",
+        "아이솔": "アイソル",
+        "리 다이린": "ダイリン",
         "유키": "雪",
-        "혜진": "慧珍",
-        "쇼우": "修凯",
-        "시셀라": "希瑟拉",
-        "키아라": "奇娅拉",
-        "아드리아나": "阿德瑞娜",
+        "혜진": "ヘジン",
+        "쇼우": "シウカイ",
+        "시셀라": "シセラ",
+        "키아라": "キアラ",
+        "아드리아나": "アドリアナ",
         "쇼이치": "彰一",
-        "실비아": "西尔维娅"
+        "실비아": "シルヴィア"
     },
     "weapons": {
-        "투척": "投掷", 
-        "권총": "手枪", 
-        "돌격소총": "冲锋枪", 
-        "저격총": "狙击枪", 
-        "레이피어": "双刃剑", 
-        "창": "枪", 
-        "양손검": "双手剑", 
-        "기타": "吉他", 
+        "투척": "投げ", 
+        "권총": "拳銃", 
+        "돌격소총": "突撃小銃", 
+        "저격총": "狙撃銃", 
+        "레이피어": "レイピア", 
+        "창": "槍", 
+        "양손검": "両手剣", 
+        "기타": "ギター", 
         "활": "弓", 
         "암기": "暗器", 
-        "톤파": "旋棍", 
-        "글러브": "皮手套", 
-        "도끼": "斧子", 
-        "쌍검": "双剑", 
-        "단검": "单手剑", 
-        "쌍절곤": "双节棍", 
-        "배트": "棒", 
-        "망치": "铁锤", 
-        "석궁": "弩"        
+        "톤파": "トンファー", 
+        "글러브": "グローブ", 
+        "도끼": "斧", 
+        "쌍검": "テュアルソード", 
+        "단검": "短剣", 
+        "쌍절곤": "双節棍", 
+        "배트": "バット", 
+        "망치": "金槌", 
+        "석궁": "石弓"        
     },
     "armor": {
         "옷": "胸部",
-        "머리":"头部",
-        "팔": "手臂",
-        "다리": "腿部",
-        "장식": "装饰"
+        "머리":"頭",
+        "팔": "腕",
+        "다리": "脚",
+        "장식": "装具"
     },
-    "Archery": "Archery",
-    "Alley": "Alley",
-    "Avenue": "Avenue",
-    "Temple": "Temple",
-    "School": "School",
-    "Hotel": "Hotel",
-    "Pond": "Pond",
-    "Research": "Research",
-    "Beach": "Beach",
-    "Forest": "Forest",
-    "Cemetery": "Cemetery",
-    "Hospital": "Hospital",
-    "Uptown": "Uptown",
-    "Chapel": "Chapel",
-    "Factory": "Factory",
-    "Dock": "Dock",
+    "Archery": "洋弓場",
+    "Alley": "路地裏",
+    "Avenue": "下町",
+    "Temple": "寺",
+    "School": "学校",
+    "Hotel": "ホテル",
+    "Pond": "池",
+    "Research": "研究所",
+    "Beach": "浜辺",
+    "Forest": "森",
+    "Cemetery": "墓場",
+    "Hospital": "病院",
+    "Uptown": "高級住宅街",
+    "Chapel": "教会",
+    "Factory": "工場",
+    "Dock": "港",
     
     "items":{
-        "일렉트론블라스터": "电子光束枪",
-        "마탄의사수": "魔弹射手",
-        "매그넘-보아": "马格农-慱亚",
-        "악켈테": "凯尔特",
-        "엘레강스": "优雅者之枪",
-        "단영촌천투": "寸拳",
-        "디바인피스트": "圣拳",
-        "브레이질건틀릿": "巴西拳套",
-        "블러드윙너클": "血翼指虎",
-        "빙화현옥수": "霜瓣玉手",
-        "소수": "赤手空拳",
+        "일렉트론블라스터": "エレクトロンブラスター",
+        "마탄의사수": "魔弾の射手",
+        "매그넘-보아": "マグナム-ボア",
+        "악켈테": "アクケルテ",
+        "엘레강스": "エレガンス",
+        "단영촌천투": "単永村千闘",
+        "디바인피스트": "聖なる拳",
+        "브레이질건틀릿": "B-ガントレット",
+        "블러드윙너클": "ウイングナックル",
+        "빙화현옥수": "氷花現玉手",
+        "소수": "素手",
         "여래수투": "如来种掌",
-        "천잠장갑": "天蚕手套",
-        "더월": "红砖",
-        "보헤미안": "波希米亚",
-        "새티스팩션": "乐事",
-        "원더풀투나잇": "绝色之夜",
-        "천국의계단": "天国的阶梯",
-        "틴스피릿": "少年魂",
-        "퍼플헤이즈": "柴色团雾",
-        "초진동나이프": "共振匕首",
-        "카른웬난": "亚瑟王的短剑",
+        "천잠장갑": "天蚕手袋",
+        "더월": "ザ·ウォール",
+        "보헤미안": "ボヘミアン",
+        "새티스팩션": "サティスファクション",
+        "원더풀투나잇": "ワンダフル·トゥナイト",
+        "천국의계단": "天国の階段",
+        "틴스피릿": "ティンスピリット",
+        "퍼플헤이즈": "パープルヘイズ",
+        "초진동나이프": "超振動ナイフ",
+        "카른웬난": "カルンウェンナン",
         "파산검": "破山剑",
-        "프라가라흐": "佛拉格拉克",
-        "빔엑스": "激光刃斧",
-        "산타무에르떼": "死亡圣神之镰",
-        "스퀴테": "大镰刀",
-        "파라슈": "罗犘斧",
-        "하르페": "赫帕尔",
+        "프라가라흐": "プラガラフ",
+        "빔엑스": "ビームエックス",
+        "산타무에르떼": "サンタムエルテ",
+        "스퀴테": "大镰",
+        "파라슈": "パラシュ",
+        "하르페": "ハルペ",
         "AK-12": "AK-12",
         "XCR": "XCR",
-        "개틀링건": "加特林机枪",
-        "기관총": "经机枪",
-        "듀랜달Mk2": "杜伦德尔 mk2",
-        "미스틸테인": "米斯特汀",
-        "볼틱레토": "带电短刀",
-        "유성검": "陨星重剑",
-        "주와이외즈": "咎瓦尤斯",
+        "개틀링건": "ガトリングガン",
+        "기관총": "機関銃",
+        "듀랜달Mk2": "デュランダル mk2",
+        "미스틸테인": "ミスチルテイン",
+        "볼틱레토": "ボルティックレット",
+        "유성검": "正義の剣",
+        "주와이외즈": "ヅョワユーズ",
         "활빈검": "正义之剑",
-        "개밥바라기": "夜柛星锤",
+        "개밥바라기": "金星剣",
         "낭아봉": "狼牙棒",
-        "다그다의망치": "达格达的大釜",
-        "마법봉": "魔法棒",
-        "토르의망치": "雷神之锤",
-        "구원의여신상": "救世女神像",
-        "스파이의우산": "特工伞",
-        "여의봉": "如意金箍棒",
-        "타구봉": "打狗棒",
-        "대황": "大将灵魂",
-        "발리스타": "诸葛连弩",
-        "샤릉가": "沙兰加",
+        "다그다의망치": "ダグダのハンマー",
+        "마법봉": "魔法ステッキ",
+        "토르의망치": "トールハンマー",
+        "구원의여신상": "救援の女柛像",
+        "스파이의우산": "スパイの傘",
+        "여의봉": "如意棒",
+        "타구봉": "打球棒",
+        "대황": "李広の弩",
+        "발리스타": "バリスタ",
+        "샤릉가": "シャルンガ",
         "영광금귀신기노": "灵光金龟神机弩",
-        "저격크로스보우": "狙击弩",
-        "디오스쿠로이": "狄奧斯库洛伊",
-        "로이거 차르": "罗伊格尔 & 扎尔",
+        "저격크로스보우": "狙撃クロスボウ",
+        "디오스쿠로이": "ディオスクロイ",
+        "로이거 차르": "ロイガー·ツァーリ",
         "이천일류": "二天一流",
-        "자웅일대검": "雌雄双股剑",
-        "대소반룡곤": "大小盘龙棍",
-        "초진동눈차크": "超级震动双节棍",
-        "건곤권": "风火轮",
+        "자웅일대검": "雌雄ー対の剑",
+        "대소반룡곤": "大小盤龍棍",
+        "초진동눈차크": "超振動ヌンチャク",
+        "건곤권": "乾坤圈",
         "만천화우": "满天花雨",
-        "미치광이왕의카드": "病子国王的卡片",
-        "빙백은침": "冰魄银针",
-        "생사부": "亡者之符",
-        "수다르사나": "妙见神轮",
-        "옥전결": "翡翠秘符",
-        "푸른색단도": "蔚蓝匕首",
-        "풍마수리검": "风魔手里剑",
-        "플레솃": "飞镖弹",
-        "다인슬라이프": "噬血魔剑",
-        "뚜언띠엔": "順天剑",
-        "레바테인": "破灭之枝",
-        "모노호시자오": "晒衣杆",
-        "아론다이트": "阿隆戴特",
+        "미치광이왕의카드": "狂気王のカード",
+        "빙백은침": "冰魄銀針",
+        "생사부": "生死符",
+        "수다르사나": "スダルサナ",
+        "옥전결": "玉篆訣",
+        "푸른색단도": "青色の短刀",
+        "풍마수리검": "風魔手裏剣",
+        "플레솃": "プレシェット弾",
+        "다인슬라이프": "ダインスライヴ",
+        "뚜언띠엔": "夕ンキエム",
+        "레바테인": "レーヴァテイン",
+        "모노호시자오": "物干し竿",
+        "아론다이트": "アロンダイト",
         "엑스칼리버": "断钢圣剑",
-        "플라즈마소드": "等离子剑",
-        "호푸어드": "天卫之剑",
+        "플라즈마소드": "プラズマソード",
+        "호푸어드": "ホヴズ",
         "NTW-20": "NTW-20",
         "Tac-50": "Tac-50",
-        "사사성광": "四射星光",
-        "폴라리스": "北极星",
-        "인터벤션": "夜行",
-        "롱기누스의창": "朗基努斯之枪",
-        "방천화극": "方天画戟",
-        "애각창": "涯角枪",
+        "사사성광": "斜射星光",
+        "폴라리스": "ポラリス",
+        "인터벤션": "インターベンション",
+        "롱기누스의창": "ロンギヌスの窓",
+        "방천화극": "方天畫戟",
+        "애각창": "涯角槍",
         "장팔사모": "丈八蛇矛",
         "청룡언월도": "青龙偃月刀",
-        "코스믹바이던트": "宇宙双叉戟",
-        "트리아이나": "波塞冬之枪",
-        "화첨창": "火尖枪",
-        "마이쏙": "秦式拳法",
-        "택티컬톤파": "战术旋棍",
-        "플라즈마톤파": "等离旋棍",
-        "고폭수류탄": "高爆手榴弹",
-        "다비드슬링": "大卫的弹弓",
-        "루테늄구슬": "钌珠",
-        "소이탄": "燃烧弹",
-        "안티오크의수류탄": "安提奥克的手榴弹",
-        "연막탄": "烟雰弹",
-        "골든래쇼보우": "黄金比例弓",
-        "엘리멘탈보우": "元素灵弓",
-        "트윈보우": "双子杀",
-        "페일노트": "血之刻印",
+        "코스믹바이던트": "コスミックバイデント",
+        "트리아이나": "トリアイナ",
+        "화첨창": "火尖槍",
+        "마이쏙": "マイソック",
+        "택티컬톤파": "戦術トンファー",
+        "플라즈마톤파": "プラズマトンファー",
+        "고폭수류탄": "高爆手榴弾",
+        "다비드슬링": "ダビデのスリング",
+        "루테늄구슬": "ルテニウムの玉",
+        "소이탄": "焼夷弾",
+        "안티오크의수류탄": "アンティオキの手榴弾",
+        "연막탄": "煙幕弾",
+        "골든래쇼보우": "黄金比率の弓",
+        "엘리멘탈보우": "エレメンタルボウ",
+        "트윈보우": "ツインボウ",
+        "페일노트": "無駄なしの弓",
         "편전": "片箭",
-        "경량화부츠": "羽靴",
-        "글레이셜슈즈": "万年冰鞋",
-        "매버릭러너": "马弗里克之履",
-        "미스릴부츠": "秘珢靴",
-        "부케팔로스": "布西发拉斯",
-        "분홍신": "红鞋",
-        "클링온부츠": "白犀牛靴子",
-        "풍화륜": "凤火轮",
-        "헤르메스의부츠": "赫尔墨斯之靴",
-        "EOD부츠": "EOD 防爆靴",
-        "기사단장의투구": "方旗骑士盔",
-        "미스릴투구": "秘锟头盔",
-        "변검": "脸谱",
-        "수정티아라": "水晶冠",
-        "오토바이헬멧": "摩托车头盔",
+        "경량화부츠": "軽量化ブーツ",
+        "글레이셜슈즈": "グレイシャル·シューズ",
+        "매버릭러너": "マーベリックランナー",
+        "미스릴부츠": "ミスリル·ブーツ",
+        "부케팔로스": "ブケバロス",
+        "분홍신": "赤い靴",
+        "클링온부츠": "クリングオンブーツ1",
+        "풍화륜": "風化輪",
+        "헤르메스의부츠": "ヘルメスのブーツ",
+        "EOD부츠": "EODシューズ",
+        "기사단장의투구": "騎士団長の兜",
+        "미스릴투구": "ミスリルヘル厶",
+        "변검": "臉譜",
+        "수정티아라": "水晶ティアラ",
+        "오토바이헬멧": "トバイヘルメット",
         "월계관": "月桂冠",
-        "전술OPS헬멧": "OPS 战术头盔",
-        "제국왕관": "帝国皇冠",
-        "황실부르고넷": "帝国战盔",
-        "EOD수트": "EOD 防爆服",
-        "광학미채수트": "光学迷彩服",
-        "락커의자켓": "摇滚乐手来克",
-        "미스릴갑옷": "秘银链甲",
-        "배틀수트": "骑士战甲",
-        "불꽃드레스": "星火洋装",
-        "석양의갑옷": "余晖之铠",
-        "성기사의갑옷": "十字军重甲",
-        "아마조네스아머": "亚马逊战甲",
+        "전술OPS헬멧": "戦術opsヘルメット",
+        "제국왕관": "帝国王冠",
+        "황실부르고넷": "皇室ブルゴネット",
+        "EOD수트": "EODスーツ ",
+        "광학미채수트": "光学迷彩スーツ",
+        "락커의자켓": "ロッカーのジャケット",
+        "미스릴갑옷": "ミスリル鎧",
+        "배틀수트": "バトルスーツ",
+        "불꽃드레스": "炎のドレス",
+        "석양의갑옷": "黄昏の鎧",
+        "성기사의갑옷": "聖騎士の鎧",
+        "아마조네스아머": "アマゾネスアーマー",
         "어사의": "御史衣",
-        "용의도복": "龙之道服",
-        "지휘관의갑옷": "指挥官战甲",
-        "집사복": "管家服",
-        "카바나": "日轮之铠",
-        "퀸오브하트": "红心女王",
-        "궁기병의 화살통": "骑兵箭筒",
-        "달빛펜던트": "皎月吊坠",
-        "만년빙": "极冰",
+        "용의도복": "龍の道服",
+        "지휘관의갑옷": "指揮官の鎧",
+        "집사복": "執事服",
+        "카바나": "カバナ",
+        "퀸오브하트": "クイーンオブハート",
+        "궁기병의 화살통": "弓騎兵の矢筒",
+        "달빛펜던트": "月光ペンダント",
+        "만년빙": "万年氷",
         "백우선": "白羽扇",
-        "삼매진화": "三昧真火",
-        "슈뢰딩거의상자": "薛定谔的猫箱",
-        "에메랄드타블렛": "翡翠石板",
-        "우치와": "团扇",
-        "진리는나의빛": "真我之光",
-        "탄창": "弹夹",
-        "먼지털이개": "鸡毛掸子",
-        "기사의신조": "骑士信条",
-        "드라우프니르": "德罗普尼尔",
-        "레이더": "雷达",
-        "미스릴방패": "秘银盾",
-        "바이탈센서": "生命讯号感測器",
-        "샤자한의검집": "沙.贾汗之剑",
-        "소드스토퍼": "阻刃护臂",
-        "스카디의팔찌": "斯嘉蒂的手鐲",
-        "오토암즈": "自动臂",
-        "큐브워치": "召晚手表"
+        "삼매진화": "三昧進化",
+        "슈뢰딩거의상자": "博士の箱",
+        "에메랄드타블렛": "エメラルドタブレット",
+        "우치와": "うちわ",
+        "진리는나의빛": "真理は我ガ光",
+        "탄창": "弾倉",
+        "먼지털이개": "埃払い",
+        "기사의신조": "騎士の信条",
+        "드라우프니르": "ドラウプニル",
+        "레이더": "レーダー",
+        "미스릴방패": "ミスリル盾",
+        "바이탈센서": "バイタルセンサー",
+        "샤자한의검집": "シャーヅャハーン鞘",
+        "소드스토퍼": "ソードストッパー",
+        "스카디의팔찌": "スカディのブレスレット",
+        "오토암즈": "オートアームズ",
+        "큐브워치": "キューブウォッチ"
 
     },
     "skill": {
