--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -59,7 +59,7 @@
         "skill_info": "스킬 정보",
         "passive": "패시브",
         "weaponSkill": "무기스킬",
-        "스킬트리" : "Skill Tree",
+        "스킬트리" : "스킬트리",
         "평타" : "평타",
         "흡혈" : "흡혈",
         "스킬" : "스킬"
