--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -1,4 +1,8 @@
 {
+    "Title": {
+        "Main": "ブラックサバイバル: 永遠回帰 情報",
+        "Map":"地図図鑑 / 経路制作"
+    },
     "Data-period": "更新 2020.11.19 / 数据期间 2020.11.17 ~ 11.18",
     "search": "検索",
     "character": "性格",
