--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -1,4 +1,8 @@
 {
+    "Title": {
+        "Main": "永遠回歸 : 黑色幸存者 统计",
+        "Map":"地图鉴别 / 路径制作"
+    },
     "Data-period": "更新 2020.11.19 / 数据期间 2020.11.17 ~ 11.18",
     "search": "搜索",
     "character": "性格",
