스킬 트리 수정

--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -62,7 +62,7 @@
         "passive": "受動的",
         "weaponSkill": "武器スキル",
         "스킬트리" : "スキルツリー",
-        "평타" : "基本攻撃",
+        "치명타" : "基本攻撃",
         "흡혈" : "体力力吸収",
         "스킬" : "スキル増幅"
     },
