--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -62,7 +62,7 @@
         "passive": "被动的",
         "weaponSkill": "武器技能",
         "스킬트리" : "技能次序",
-        "평타" : "基本攻击",
+        "치명타" : "基本攻击",
         "흡혈" : "体能吸收",
         "스킬" : "技能增幅"
     },
