루트 오류 수정 및 번역 추가

--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -22,9 +22,13 @@
     "avg-kill": "平均-キル",
     "name":"名字",
     "지도 도감":"地図図鑑",
-    "루트제작":"経路制作 - 準備中",
+    "루트제작":"経路制作",
     "드랍 아이템":"ドロップ 物品",
     "출현 동물":"出現動物",
+    "최종 무기":"最終武器",
+    "시작 무기":"試作武器",
+    "능력치":"能力値",
+    "계산":"計算",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"キャラクターティアは、公式統計を基にしたキャラクターの勝率、ピック率、平均キル数、平均順位などを基に作られます。 デュオとスクワッドの統計では、平均キール数と平均順位のティアへの影響力が減少します。",
     "question_item":"防具アイテムの統計は、資料不足により全キャラクター基準勝率資料です。 各キャラクター別の防御球の勝率ではありません。",
