--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -22,9 +22,13 @@
     "avg-kill": "Avg-kill",
     "name":"Name",
     "지도 도감":"Map Catalog",
-    "루트제작":"Making Route - coming soon",
+    "루트제작":"Making Route",
     "드랍 아이템":"Drop Item",
     "출현 동물":"Appearing Animal",
+    "최종 무기":"Final Weapon",
+    "시작 무기":"Start Weapon",
+    "능력치":"Stats",
+    "계산":"Make",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\n Eternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\n Data Based on Nimble Neuron",
     "question":"The character tier is based on the winning rate, pick rate, average skill, and average rank of characters based on official statistics. Duo and squad statistics reduce the influence on average kill and tier of average rank.",
     "question_item":"Armor item statistics are data on the win rate based on all characters due to lack of data. It is not the armor win rate for each character.",
