--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -22,9 +22,13 @@
     "avg-kill": "평균킬",
     "name":"이름", 
     "지도 도감":"지도 도감",
-    "루트제작":"루트 제작 - 준비중",
+    "루트제작":"루트 제작",
     "드랍 아이템":"드랍 아이템",
     "출현 동물":"출현 동물",
+    "최종 무기":"최종 무기",
+    "시작 무기":"시작 무기",
+    "능력치":"능력치",
+    "계산":"계산",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"캐릭터 티어는 공식 통계를 기반으로한 캐릭터들의 승률, 픽률, 평균킬수, 평균순위 등을 바탕으로 만들어집니다. 듀오와 스쿼드 통계에서는 평균킬수와 평균순위의 티어에 미치는 영향력이 감소합니다.",
     "question_item":"방어구 아이템 통계는 자료부족으로 인해 전 캐릭터 기준 승률 자료입니다. 각 캐릭터별 방어구 승률이 아닙니다.",
