--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -22,9 +22,13 @@
     "avg-kill": "平均-击杀",
     "name":"名字",
     "지도 도감":"地图鉴别",
-    "루트제작":"路径制作 - 准备中",
+    "루트제작":"路径制作",
     "드랍 아이템":"物品",
     "출현 동물":"出现动物",
+    "최종 무기":"最终武器",
+    "시작 무기":"开始武器",
+    "능력치":"能力值",
+    "계산":"计算",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"字符层是根据官方统计的获胜率,选择率,平均技能,平均等级等来计算的。 多重和班级的统计数字减少 了普通杀戮和普通等级的影响。",
     "question_item":"装甲项目统计数据是由于缺少 数据而基于所有角色的获胜率数据。不是每个角色的装甲赢率。",
