루트 마무리 디자인

--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -31,8 +31,8 @@
     "계산":"계산",
     "선택":"선택",
     "우선 장비":"우선 장비",
-    "filter1":"filter1",
-    "filter2":"filter2",
+    "filter1":"장비 선택",
+    "filter2":"지역 선택",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"캐릭터 티어는 공식 통계를 기반으로한 캐릭터들의 승률, 픽률, 평균킬수, 평균순위 등을 바탕으로 만들어집니다. 듀오와 스쿼드 통계에서는 평균킬수와 평균순위의 티어에 미치는 영향력이 감소합니다.",
     "question_item":"방어구 아이템 통계는 자료부족으로 인해 전 캐릭터 기준 승률 자료입니다. 각 캐릭터별 방어구 승률이 아닙니다.",
