--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -29,10 +29,10 @@
     "시작 무기":"試作武器",
     "능력치":"能力値",
     "계산":"計算",
-    "선택":"Select",
-    "우선 장비":"우선 장비",
-    "filter1":"filter1",
-    "filter2":"filter2",
+    "선택":"選択",
+    "우선 장비":"優先物品",
+    "filter1":"物品選択",
+    "filter2":"地域選択",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"キャラクターティアは、公式統計を基にしたキャラクターの勝率、ピック率、平均キル数、平均順位などを基に作られます。 デュオとスクワッドの統計では、平均キール数と平均順位のティアへの影響力が減少します。",
     "question_item":"防具アイテムの統計は、資料不足により全キャラクター基準勝率資料です。 各キャラクター別の防御球の勝率ではありません。",
