--- a/src/locale/scn.json
+++ b/src/locale/scn.json
@@ -29,10 +29,10 @@
     "시작 무기":"开始武器",
     "능력치":"能力值",
     "계산":"计算",
-    "선택":"Select",
-    "우선 장비":"우선 장비",
-    "filter1":"filter1",
-    "filter2":"filter2",
+    "선택":"选择",
+    "우선 장비":"首先物品",
+    "filter1":"物品选择",
+    "filter2":"地区选择",
     "footer":"BSGG.kr isn’t endorsed by Nimble Neuron.\nEternal Return: Black Survival is trademarks or registered trademarks of Nimble Neuron.\nData Based on Nimble Neuron",
     "question":"字符层是根据官方统计的获胜率,选择率,平均技能,平均等级等来计算的。 多重和班级的统计数字减少 了普通杀戮和普通等级的影响。",
     "question_item":"装甲项目统计数据是由于缺少 数据而基于所有角色的获胜率数据。不是每个角色的装甲赢率。",
