루트 탭 번역추가

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -43,7 +43,8 @@
             "menu": {
                 "rank": "Rank",
                 "item": "Item",
-                "map": "Map"
+                "map": "Map",
+                "route": "Route"
             },
             "placeholder": "Search character."
         },
