--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -96,6 +96,7 @@
         "체력": "最大体力",
         "최대체력": "最大体力",
         "체력재생": "体力再生",
+        "체력재생2": "体力再生(%)",
 
         "최대스태미너": "最大スタミナ",
         "스태미너재생": "スタミナ再生",
