--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -99,6 +99,7 @@
         "체력": "최대 체력",
         "최대체력": "최대 체력",
         "체력재생": "체력 재생",
+        "체력재생2": "체력 재생(%)",
 
         "최대스태미너": "최대 스태미너",
         "스태미너재생": "스태미너 재생",
