--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -428,7 +428,7 @@
         "류큐톤파": "Ryukyu Tonfa",
         "골든브릿지": "Golden Bridge",
         "싱글픽업": "Single Coil Pickup",
-        "루비스페셜": "Ruby Special",
+        "루비스폐셜": "Ruby Special",
         "험버커픽업": "Humbucker Pickup",
         "King-V": "King-V",
         "노캐스터": "Nocaster",
