--- a/src/locale/jp.json
+++ b/src/locale/jp.json
@@ -425,7 +425,7 @@
         "류큐톤파": "琉球トンファー",
         "골든브릿지": "ゴールデンブリッジ",
         "싱글픽업": "シングルピックアップ",
-        "루비스페셜": "ルビースペシャル",
+        "루비스폐셜": "ルビースペシャル",
         "험버커픽업": "ハンバーカピックアップ",
         "King-V": "King-V",
         "노캐스터": "ノーキャスター",
