--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -429,7 +429,7 @@
         "류큐톤파": "류큐톤파",
         "골든브릿지": "골든브릿지",
         "싱글픽업": "싱글픽업",
-        "루비스페셜": "루비스페셜",
+        "루비스폐셜": "루비스페셜",
         "험버커픽업": "험버커픽업",
         "King-V": "King-V",
         "노캐스터": "노캐스터",
