배너 디자인, 디테일페이지 디자인, 티어 페이지 디자인

--- a/src/locale/ko.json
+++ b/src/locale/ko.json
@@ -44,7 +44,9 @@
                 "rank": "랭크",
                 "item": "아이템",
                 "map": "맵",
-                "route": "루트"
+                "route": "루트",
+                "tier": "캐릭터 / 티어"
+
             },
             "placeholder": "캐릭터를 검색하세요."
         },
@@ -72,7 +74,7 @@
         "skill_info": "스킬 정보",
         "passive": "패시브",
         "weaponSkill": "무기스킬",
-        "스킬트리" : "스킬트리",
+        "스킬트리" : "추천 스킬트리",
         "평타" : "평타",
         "흡혈" : "흡혈",
         "스킬" : "스킬"
